welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:-6: error: Missing closing brace `}' assumed here
try {
^max2Value:1: error: expected class or object definition
def max2Value(nums:Array[Int]): Int = {
^